fixed task1